删除代码生成项目，代码生成作为一个工具包，不作为一个微服务；修改项目各模块的部署处理逻辑

--- a/luban-samples/luban-samples-common/luban-samples-common-server/pom.xml
+++ b/luban-samples/luban-samples-common/luban-samples-common-server/pom.xml
@@ -12,6 +12,10 @@
     <name>${project.artifactId}:${project.version}</name>
     <description>${project.artifactId}:${project.version}</description>
 
+    <properties>
+        <maven.deploy.skip>true</maven.deploy.skip>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>com.wiflish.luban</groupId>
