--- a/luban-initializr/luban-initializr-generator/pom.xml
+++ b/luban-initializr/luban-initializr-generator/pom.xml
@@ -12,6 +12,10 @@
     <packaging>jar</packaging>
     <name>${project.artifactId}</name>
 
+	<properties>
+		<maven.deploy.skip>true</maven.deploy.skip>
+	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
