--- a/luban-modules/pom.xml
+++ b/luban-modules/pom.xml
@@ -13,13 +13,14 @@
     <artifactId>luban-modules</artifactId>
     <packaging>pom</packaging>
 
-    <modules>
-        <module>luban-module-generator</module>
-    </modules>
+<!--    <modules>-->
+<!--        <module>luban-module-generator</module>-->
+<!--    </modules>-->
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
+        <maven.deploy.skip>true</maven.deploy.skip>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
