--- a/luban-starters/luban-cache-starter/pom.xml
+++ b/luban-starters/luban-cache-starter/pom.xml
@@ -26,6 +26,10 @@
             <groupId>org.redisson</groupId>
             <artifactId>redisson-spring-boot-starter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba.fastjson2</groupId>
+            <artifactId>fastjson2-extension-spring6</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
