--- a/luban-parent/pom.xml
+++ b/luban-parent/pom.xml
@@ -37,8 +37,8 @@
         <mybatis-plus.version>3.5.3.2</mybatis-plus.version>
         <mybatis.plus.generator.version>3.5.3.2</mybatis.plus.generator.version>
         <mybatis.plus.freemarker.version>1.2.4</mybatis.plus.freemarker.version>
-        <redisson.version>3.24.3</redisson.version>
         <springdoc.version>2.2.0</springdoc.version>
+        <qiniu.version>[7.13.0, 7.13.99]</qiniu.version>
         <junit.version>4.13.2</junit.version>
     </properties>
     <dependencyManagement>
@@ -158,11 +158,6 @@
                 <artifactId>mysql-connector-java</artifactId>
                 <version>${mysql.version}</version>
             </dependency>
-            <dependency>
-                <groupId>org.redisson</groupId>
-                <artifactId>redisson-spring-boot-starter</artifactId>
-                <version>${redisson.version}</version>
-            </dependency>
 
             <dependency>
                 <groupId>com.baomidou</groupId>
@@ -184,6 +179,11 @@
                 <groupId>org.springdoc</groupId>
                 <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                 <version>${springdoc.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.qiniu</groupId>
+                <artifactId>qiniu-java-sdk</artifactId>
+                <version>${qiniu.version}</version>
             </dependency>
 
             <!-- 测试包 -->
