--- a/luban-starters/pom.xml
+++ b/luban-starters/pom.xml
@@ -25,6 +25,7 @@
   <modules>
     <module>luban-i18n-starter</module>
     <module>luban-mybatis-starter</module>
+    <module>luban-store-starter</module>
     <module>luban-web-starter</module>
     <module>luban-cache-starter</module>
   </modules>
