--- a/luban-starters/pom.xml
+++ b/luban-starters/pom.xml
@@ -1,32 +1,33 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-  <parent>
-    <groupId>com.wiflish.luban</groupId>
-    <artifactId>luban-parent</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
-    <relativePath>../luban-parent</relativePath>
-  </parent>
+    <parent>
+        <groupId>com.wiflish.luban</groupId>
+        <artifactId>luban-parent</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+        <relativePath>../luban-parent</relativePath>
+    </parent>
 
-  <artifactId>luban-starters</artifactId>
-  <packaging>pom</packaging>
-  <name>${project.artifactId}:${project.version}</name>
-  <description>${project.artifactId}</description>
+    <artifactId>luban-starters</artifactId>
+    <packaging>pom</packaging>
+    <name>${project.artifactId}:${project.version}</name>
+    <description>${project.artifactId}</description>
 
-  <properties>
-    <maven.compiler.source>17</maven.compiler.source>
-    <maven.compiler.target>17</maven.compiler.target>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
+    <properties>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 
-  <modules>
-    <module>luban-i18n-starter</module>
-    <module>luban-mybatis-starter</module>
-    <module>luban-store-starter</module>
-    <module>luban-web-starter</module>
-    <module>luban-cache-starter</module>
-  </modules>
+    <modules>
+        <module>luban-i18n-starter</module>
+        <module>luban-mybatis-starter</module>
+        <module>luban-store-starter</module>
+        <module>luban-web-starter</module>
+        <module>luban-cache-starter</module>
+        <module>luban-wechat-starter</module>
+    </modules>
 </project>
