--- a/luban-starters/luban-store-starter/pom.xml
+++ b/luban-starters/luban-store-starter/pom.xml
@@ -33,6 +33,10 @@
             <artifactId>qiniu-java-sdk</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.alibaba.fastjson2</groupId>
+            <artifactId>fastjson2-extension-spring6</artifactId>
+        </dependency>
+        <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
         </dependency>
