--- a/luban-starters/luban-sms-starter/pom.xml
+++ b/luban-starters/luban-sms-starter/pom.xml
@@ -34,6 +34,10 @@
             <artifactId>alibabacloud-dysmsapi20170525</artifactId>
             <version>2.0.24</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba.fastjson2</groupId>
+            <artifactId>fastjson2-extension-spring6</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
